.metadata/.plugins/org.eclipse.cdt.ui/f401test.build.log
10:46:37 **** Incremental Build of configuration Debug for project f401test ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xC -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:166:1: error: expected declaration or statement at end of input
  166 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:157:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  157 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:108:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  108 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

10:46:37 Build Failed. 2 errors, 2 warnings. (took 723ms)

